--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
   <button class="yahiko" id="unmuteBtn">MUSIC</button>
 
-  <audio id="myAudio" src="audio/dj.mp3" autoplay muted loop></audio>
+  <audio id="myAudio" src="dj.mp3" autoplay muted loop></audio>
     <section id="populer" class="populer">
         <div class="games">
             <div class="game-item">
