--- a/index.html
+++ b/index.html
@@ -257,12 +257,10 @@
     <section class="tentang" id="tentang">
         <div class="card">
             <p>
-                <h1>Ahmad Store</h1> 
-                adalah website yang menyediakan layanan digital seperti
-                <br>
-                layanan kuota, pulsa, top up/voucher game, dan lain-lain.
-                <br>
-                kami menghargai sikap sopan dari anda.
+                <h1>Selamat Datang!</h1> 
+                <p>Ahmad Store adalah platform terpercaya untuk pembelian top-up game dengan harga bersaing dan proses cepat.</p>
+                <p>Untuk pertanyaan lebih lanjut, silakan hubungi kami melalui media sosial yang tersedia di halaman utama.</p>
+                <p>kami menghargai sikap sopan dari anda.</p>
             </p>
         </div>
     </section>
